# stonk-sage

./: # Project Brief.md  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  projectbrief.md  pyproject.toml
.claude/agents/: bear.md  bull.md  cio.md  data-analyst.md  devils-advocate.md  risk-officer.md
.claude/skills/analyze/: SKILL.md
.github/agents/: bear.agent.md  bull.agent.md  cio.agent.md  data-analyst.agent.md  devils-advocate.agent.md  risk-officer.agent.md
.github/instructions/: backtesting-methodology.instructions.md  behavioral-finance.instructions.md  equity-research.instructions.md  finance-fundamentals.instructions.md  investment-strategies.instructions.md  market-microstructure.instructions.md  multi-agent-finance-patterns.instructions.md  personal-investing-tax-basics.instructions.md  risk-portfolio.instructions.md  sec-filings.instructions.md
.github/prompts/: analyze.prompt.md
.github/skills/analyze/: SKILL.md
docs/: dispatch-surface-findings.md  interpreting-memos.md  onboarding.md
examples/: AAPL_2024-06-01_latest.md  MSFT_2024-06-01_latest.md  MSFT_2026-06-13_latest.md  README.md
src/stonk_sage/: __init__.py  brain.py  contracts.py  data.py  guards.py
tests/: test_brain.py  test_contracts.py  test_data.py  test_guards.py
