[project]
name = "stonk-sage"
version = "0.0.1"
description = "Multi-agent equity research committee."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Joe Tran" }]
dependencies = [
    "pydantic>=2.7",
    "yfinance>=0.2.40",
    "edgartools>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pyright>=1.1.350",
    "pytest>=8.0",
    "pytest-socket>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stonk_sage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["live: network-touching tests (skipped by default; run with -m live)"]
addopts = "-m 'not live'"

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 100
target-version = "py312"
